--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>gottoken.me many-to-one for ERC20 — made with ❤️ for the Decentralized World.</title>
+    <title>gottoken.me many-to-one for ETH — made with ❤️ for the Decentralized World.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/normalize.css">
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
-          <h1>IKA Web — collect ERC20</h1>
+          <h1>IKA Web — collect ETH</h1>
 
           <div class="row">
             <div class="col-md">
@@ -47,30 +47,14 @@
             </div>
 
             <div class="cards row">
-              <div class="col-md-6 align-self-center col-6">
+              <div class="col">
                 <span id="balance">ETH: unknown</span>
-              </div>
-              <div class="col-md-6 align-self-center col-6">
-                <span id="token-balance"></span>
               </div>
             </div>
 
 
             <div class="cards row">
               <div class="col-md-6 col-12">
-                <input type="text" class="card narrow" placeholder="contract address" name="contract" required />
-              </div>
-              <div class="col-md-1 col-4 gas">
-                <span>gas:</span>
-              </div>
-              <div class="col-md-3 col-8">
-                <input type="number" class="card narrow" placeholder="gas limit" value="200000" name="gas" required />
-              </div>
-            </div>
-
-            <div class="cards row">
-              <div class="col-12">
-                <span id="token"></span>
               </div>
             </div>
 
@@ -83,7 +67,7 @@
               </div>
 
               <div class="col-md-2">
-                <input type="number" class="card amount" placeholder="tokens" name="amount" step="0.00000001" min="0" required />
+                <input type="number" class="card amount" placeholder="eth" name="amount" step="0.00000001" min="0" required />
               </div>
 
               <div class="col-md-2">
@@ -116,7 +100,7 @@
 
               <div class="no-gutters col-md-2">
                 <div class="no-gutters col">
-                  <input type="number" class="card amount" placeholder="tokens" id="setall-amount" step="0.00000001" min="0" />
+                  <input type="number" class="card amount" placeholder="eth" id="setall-amount" step="0.00000001" min="0" />
                 </div>
 
                 <div class="w-100"></div>
