--- a/index.html
+++ b/index.html
@@ -9,13 +9,39 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
+
     <meta name="robots" content="noarchive, noimageindex">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-10">
+            <div class="row">
+              <div class="col-6 col-md-4">
+                <h2>IKA</h2>
+                <span class="divider  d-none d-md-inline-block">&nbsp;|&nbsp;</span>
+                <span class="subtitle d-none d-md-inline-block">collect ETH</span>
+              </div>
+
+              <div class="col-md-4 d-none d-md-block"></div>
+
+              <div class="col-6 col-md-2">
+                <div id="theme-switch">
+                  <div id="switch">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
-          <h1>IKA Web — collect ETH</h1>
 
           <div class="row">
             <div class="col-md">
@@ -41,7 +67,7 @@
 
             <div class="cards row">
               <div class="col-md-10 align-self-center col">
-                <input type="text" class="card narrow" placeholder="target" name="target" required />
+                <input type="text" class="card" placeholder="target" name="target" required />
               </div>
             </div>
 
@@ -129,29 +155,41 @@
 
             <div class="cards row">
               <div class="col-md-10 align-self-center col">
-                <label><input type="checkbox" class="semi-narrow" name="agree" required /> I accept <a href="disclaimer.html" target="_blank">Terms of Service</a> and my responsibility for any possible value loss</label>
+                <label><input type="checkbox" name="agree" required /> I accept <a href="disclaimer.html" target="_blank">Terms of Service</a> and my responsibility for any possible value loss</label>
               </div>
               <div class="col-md-2 d-none d-md-block"></div>
             </div>
 
             <div class="cards row">
               <div class="col-md-10 align-self-center col">
-                <button class="card semi-narrow" id="fire">fire!</button>
+                <button class="card" id="fire">fire!</button>
               </div>
               <div class="col-md-2 d-none d-md-block"></div>
             </div>
 
           </form>
 
-          <div class="row">
-            <div class="col col-md-10">
-              <p class="donate">Donations are always appreciated: 0xB64e112b7a5711cF08<wbr>546d7cA1dB1F1aDDcFcf07</p>
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-10">
+            <div class="row">
+              <div class="col">
+                <h2>IKA</h2>
+
+                <span class="divider  d-none d-md-inline-block">&nbsp;|&nbsp;</span>
+                <span class="donate d-none d-md-inline-block">donations are always appreciated: 0xB64e112b7a5711cF08546d7cA1dB1F1aDDcFcf07</span>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/index.js"></script>
   </body>
