--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <div class="row justify-content-center">
           <div class="col-12 col-lg-10">
             <div class="row">
-              <div class="col-6 col-md-4">
-                <h2>IKA</h2>
+              <div class="col-8 col-md-4">
+                <a href="https://gottoken.me/"><h2>IKA</h2></a>
                 <span class="divider  d-none d-md-inline-block">&nbsp;|&nbsp;</span>
                 <span class="subtitle d-none d-md-inline-block">collect ETH</span>
               </div>
 
               <div class="col-md-4 d-none d-md-block"></div>
 
-              <div class="col-6 col-md-2">
+              <div class="col-4 col-md-2">
                 <div id="theme-switch">
                   <div id="switch">
                   </div>
@@ -47,7 +47,7 @@
             <div class="col-md">
 
               <div>
-                <a class="collapsible"><span>+</span> <u><b>How to use</b></u></a>
+                <a class="collapsible off"><span>▶</span> <u><b>How to use</b></u></a>
                 <div class="collapsed">
                   <p>This tool helps you to collect Ethereum tokens from many Ethereum wallets to a single one.</p>
                   <p>Enter the address you want to send tokens to. If balance is displayed, it is valid. After that, enter the private keys for wallets you want to send tokens from (all data is processed in your browser, we DO NOT HAVE ACCESS TO YOUR KEYS). They'll get replaced with the wallets' addresses.</p>
