New font, new glow and shadow for dark theme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <meta name="robots" content="noarchive, noimageindex">
   </head>
@@ -39,6 +39,7 @@
       </div>
       <div class="glow"></div>
     </header>
+    <div class="shadow"></div>
 
     <div class="container">
       <div class="row justify-content-center">
@@ -176,6 +177,7 @@
       </div>
     </div>
 
+    <div class="shadow bottom"></div>
     <footer>
       <div class="glow"></div>
       <div class="container">
