--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="glow"></div>
     </header>
-    <div class="shadow"></div>
+    <div class="shadow top"></div>
 
     <div class="container">
       <div class="row justify-content-center">
