--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/tingle.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
 
@@ -159,7 +160,7 @@
 
             <div class="cards row">
               <div class="col-md-10 align-self-center col">
-                <label><input type="checkbox" name="agree" required /> I accept <a href="disclaimer.html" target="_blank">Terms of Service</a> and my responsibility for any possible value loss</label>
+                <label><input type="checkbox" name="agree" required /> I accept <a href="disclaimer.html" target="_blank" id="tos">Terms of Service</a> and my responsibility for any possible value loss</label>
               </div>
               <div class="col-md-2 d-none d-md-block"></div>
             </div>
