--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
               </div>
             </div>
 
+            <div class="cards row">
+              <div class="col-md-6 col-12">
+              </div>
+              <div class="col-md-1 col-4 gas">
+                <span>gas:</span>
+              </div>
+              <div class="col-md-3 col-8">
+                <input type="number" class="card narrow" placeholder="gas limit" value="50000" name="gas" required />
+              </div>
+            </div>
+
 
             <div class="cards row">
               <div class="col-md-6 col-12">
